<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/active_mode_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_actionbar"
        app:title="@string/title_active_device_manager"
        app:titleTextColor="#FF000000"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_margin="14dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/title_activemode"
            android:textSize="16sp"
            android:textColor="@color/colorPrimaryDark"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/user_active_description"
            android:textSize="16sp"
            android:textColor="@color/colorPrimaryDark"/>

        <Button
            android:id="@+id/btn_user_active_admin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorButtonBg"
            android:textColor="@color/colorText"
            android:text="@string/user_activemode"
            android:textAllCaps="false"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/force_active_description"
            android:textSize="16sp"
            android:textColor="@color/colorPrimaryDark"/>

        <Button
            android:id="@+id/btn_force_active_admin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorButtonBg"
            android:textColor="@color/colorText"
            android:text="@string/force_activemode"
            android:textAllCaps="false"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/delay_active_description"
            android:textSize="16sp"
            android:textColor="@color/colorPrimaryDark"/>
        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/colorDark"
            >

            <EditText
                android:id="@+id/edit_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/delay_hint"
                android:inputType="number" />

            <Button
                android:id="@+id/btn_delay_active_admin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorButtonBg"
                android:textColor="@color/colorText"
                android:text="@string/delay_activemode"
                android:textAllCaps="false"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>